Fix bug with nav menu not showing on hamburger icon click
Updated nav-item.active to nav-menu-active in styles.css to trigger left property

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -126,6 +126,8 @@ a {
   height: 3px;
   margin: 5px auto;
   background-color: var(--primary-colour);
+  -webkit-transition: all 0.3ms ease-in-out;
+  transition: all 0.3ms ease-in-out;
 }
 
 main {
@@ -312,7 +314,7 @@ main {
     margin: 16px 0;
   }
 
-  .nav-item.active {
+  .nav-menu.active {
     left: 0;
   }
 
